--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
         </div>
         <div class="contact-us__icons">
           <div class="icon-holder">
-            <span class="icon-holder__label">info@fronthooks.ir</span>
+            <span class="icon-holder__label">test@gmail.com</span>
             <span class="icon-container">
               <svg class="icon">
                 <use xlink:href="/assets/images/svg-sprite.svg#Message"></use>
@@ -707,7 +707,7 @@
             </span>
           </div>
           <div class="icon-holder">
-            <span class="icon-holder__label">09182430012</span>
+            <span class="icon-holder__label">09120000000</span>
             <span class="icon-container">
               <svg class="icon">
                 <use xlink:href="/assets/images/svg-sprite.svg#Calling"></use>
@@ -716,7 +716,7 @@
           </div>
           <div class="icon-holder">
             <span class="icon-holder__label"
-              >کردستان - سنندج - خیابان 1 - کوچه 2.</span
+              >تهران - اقدسیه - خیابان موحد دانش - کوچه 2.</span
             >
             <span class="icon-container">
               <svg class="icon icon--small">
